refactor: remove redundant comments and streamline conditional logic across ambience-related classes and controllers